[package]
description = "internal"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "envcrypt-macro"
publish     = true
release     = false
version     = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path       = "src/lib.rs"
proc-macro = true

[dependencies]
magic-crypt      = "3.1.10"
proc-macro-error = { version = "1", default-features = false }
proc-macro2      = "1.0.43"
quote            = "1.0.21"
rand             = "0.8.5"
