[package]
description = "internal"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "envcrypt-macro"
repository  = "https://github.com/caass/envcrypt-rs"
version     = "0.2.1"

[package.metadata.release]
shared-version = true
tag            = false

[lib]
path       = "src/lib.rs"
proc-macro = true

[dependencies]
magic-crypt      = "3.1.10"
proc-macro-error = { version = "1", default-features = false }
proc-macro2      = "1.0.43"
quote            = "1.0.21"
rand             = "0.8.5"
