[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "envcrypt-test"
publish = false
version = "0.2.1"

[package.metadata.release]
shared-version = true
tag            = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envcrypt = { path = "../envcrypt" }

[dev-dependencies]
trybuild = "1.0.64"
