[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "envcrypt-test"
publish = false
version = "0.0.0"

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envcrypt = { path = "../envcrypt" }

[dev-dependencies]
regex    = "1.6.0"
trybuild = "1.0.64"
