[package]
authors = ["Cass Fridkin <cass@swag.lgbt>"]
categories = ["cryptography", "development-tools::build-utils"]
description = "Encrypt environment variables at compile-time and decrypt them at runtime."
edition = "2021"
keywords = [
  "environment-vars",
  "encrypt-environment",
  "encrypt-variables",
  "encrypt-env",
  "encrypt-env-vars",
]
license = "MIT OR Apache-2.0"
name = "envcrypt"
readme = "../README.md"
repository = "https://github.com/caass/envcrypt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envcrypt-macro = { path = "../envcrypt-macro", version = "0.1.0" }
litcrypt       = "0.3.0"
magic-crypt    = "3.1.10"

[dev-dependencies]
dotenvy = "0.15.3"
